# leap_joy

./: README.md
modified_combined_base_arm_joy/: CMakeLists.txt  package.xml
modified_combined_base_arm_joy/launch/: mover_joy.launch
modified_combined_base_arm_joy/src/: eddie_joy.cpp
rosleapmotion/: CMakeLists.txt  package.xml
rosleapmotion/LeapSDK/: LeapMotion Instalation.txt
rosleapmotion/launch/: base_control.launch  mover_sender.launch  mover_trajectori.launch
rosleapmotion/scripts/: base_control.py  mover_sender.py  mover_trajectory.py  subscriber.py
